# equinix-fabric-mcp

./: .gitignore  .npmignore  API_LIMITATIONS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPRECATION_NOTICE.md  FAQ.md  MIGRATION.md  QUICKSTART.md  README.md  SECURITY.md  V2.2_UPDATE_SUMMARY.md  package.json  pyproject.toml  requirements.txt  server.py  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: claude-desktop-config.json  connection-examples.md  router-examples.md
src/: index.ts
